# ScoreScraper

./: .gitignore  README.md  pyproject.toml
scoreScraper/: __init__.py  __main__.py
