[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scoreScraper"
description = "Scrapes scores and winners from baseball reference"
version = "1.0.0"
requires-python = ">=3.8"
dependencies = [
    "click",
    "pycodestyle",
    "pydocstyle",
    "pylint",
    "mypy",
    "pytest",
    "pytest-mock",
    "html5lib",
]

[project.scripts]
scoreScraper-start = "scoreScraper.__main__:main"